# postix

./: .env.example  .gitignore  config.py  main.py  message_processor.py  pyproject.toml
dto/: message.py
observers/: telegram.py
postix/: config.py  main.py
postix/dto/: message.py
postix/observers/: __init__.py  base.py  telegram.py
postix/publishers/: base.py  telegram.py
postix/tests/observers/: test_telegram.py
postix/tests/publishers/: telegram.py  test_telegram.py
publishers/: __init__.py  base.py  telegram.py
tests/publishers/: telegram.py
